<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/photo4">

    <Button
        android:id="@+id/button6"
        android:layout_width="82dp"
        android:layout_height="68dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="152dp"
        android:background="@android:drawable/sym_action_chat"
        android:text="Notify!"
        app:layout_constraintStart_toEndOf="@+id/radio_group"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="82dp"
        android:layout_height="68dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="84dp"
        android:background="@android:drawable/sym_action_chat"
        android:text="Hey!"
        app:layout_constraintStart_toEndOf="@+id/radio_group"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="TextView"
        style="@style/MyTextStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:checked="true"
            android:drawableLeft="@android:drawable/btn_star_big_on"
            android:text="@string/color_red"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            android:theme="@style/MyRadioButton"/>

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="168dp"
            android:layout_height="71dp"
            android:drawableLeft="@android:drawable/btn_star_big_on"
            android:text="@string/color_green"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            android:theme="@style/MyRadioButton"/>

        <RadioButton
            android:id="@+id/radio3"
            android:layout_width="168dp"
            android:layout_height="65dp"
            android:drawableLeft="@android:drawable/btn_star_big_on"
            android:text="@string/color_blue"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            android:theme="@style/MyRadioButton"/>
    </RadioGroup>

    <Button
        android:id="@+id/button5"
        android:layout_width="102dp"
        android:layout_height="93dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="372dp"
        android:background="@android:drawable/ic_dialog_email"
        android:text="Send Choise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radio_group"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>